--- a/assignment05/version-a/client/sumVectorsForm.html
+++ b/assignment05/version-a/client/sumVectorsForm.html
@@ -4,9 +4,9 @@
 </head>
 <body>
  <form action="sumVectorsFormBean.jsp" method="POST">
-	(input) vector1 file name <input type="text" name="v1FileName" /><br/>
-	(input) vector2 file name <input type="text" name="v2FileName" /><br/>
-	(output) vector3 file name <input type="text" name="sumFileName" /><br/>
+	(input) vector1 file path <input type="text" name="v1FileName" /><br/>
+	(input) vector2 file path <input type="text" name="v2FileName" /><br/>
+	(output) vector3 file path <input type="text" name="sumFileName" /><br/>
 
   <input type="submit" value="Sum Vectors via RMI" />
  </form>
